--- a/compare.html
+++ b/compare.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>前端开发框架集合——不断完善中 By jsued.com</title>
-<link href="css/style.css" rel="stylesheet" type="text/css">
+<link href="https://github.com/markyun/web-development-tools/blob/master/css/style.css" rel="stylesheet" type="text/css">
 <meta property="og:title" content="Front-end CSS Frameworks" />
 <meta property="og:url" content="http://usablica.github.com/front-end-frameworks/compare.html" />
 <meta property="og:image" content="http://usablica.github.com/front-end-frameworks/images/css-frameworks.png" />
